trunk/Archive2/0c/31c1d6940bf0ad/output
main.cpp: In function 'int main()':
main.cpp:14:31: error: invalid initialization of non-const reference of type 'std::__cxx11::string& {aka std::__cxx11::basic_string<char>&}' from an rvalue of type 'std::__cxx11::string {aka std::__cxx11::basic_string<char>}'
     /*const*/ string &r = meow();
                               ^
